# rust-ppm

./: .gitignore  Cargo.toml  README.md
examples/decode/: main.rs
examples/encode/: main.rs
src/: LICENSE  colour.rs  error.rs  image.rs  lib.rs  util.rs
