[package]
name = "ppm"
version = "0.1.0"
authors = ["Cameron Phillips <cameron0505@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ppm"
path = "src/lib.rs"

[[bin]]
name = "ppm"
path = "src/bin/main.rs"

[dependencies]
